RESOLVED FIXED106252
[qt] Fix ENABLE_IFRAME_SEAMLESS=0 builds.
https://bugs.webkit.org/show_bug.cgi?id=106252
Summary [qt] Fix ENABLE_IFRAME_SEAMLESS=0 builds.
Mike West
Reported 2013-01-07 14:15:58 PST
[qt] Fix ENABLE_IFRAME_SEAMLESS=0 builds.
Attachments
Patch (1.64 KB, patch)
2013-01-07 14:17 PST, Mike West
no flags
Mike West
Comment 1 2013-01-07 14:17:50 PST
Eric Seidel (no email)
Comment 2 2013-01-07 14:27:33 PST
Comment on attachment 181564 [details] Patch LGTM.
WebKit Review Bot
Comment 3 2013-01-07 15:30:33 PST
Comment on attachment 181564 [details] Patch Clearing flags on attachment: 181564 Committed r139001: <http://trac.webkit.org/changeset/139001>
WebKit Review Bot
Comment 4 2013-01-07 15:30:36 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.