[qt] Fix ENABLE_IFRAME_SEAMLESS=0 builds. https://bugs.webkit.org/show_bug.cgi?id=106252

Reviewed by Eric Seidel.

Wrap the call to setSeamlessIFramesEnabled in an ifdef in order
to ensure that it's only called when IFRAME_SEAMLESS is enabled.

* WebCoreSupport/DumpRenderTreeSupportQt.cpp:
(DumpRenderTreeSupportQt::setSeamlessIFramesEnabled):


Canonical link: https://commits.webkit.org/124461@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139001 268f45cc-cd09-0410-ab3c-d52691b4dbfc